wcserver/cpp/include/wcserver.h

DWORD APIENTRY GetWildcatServerContextHandle();
///////////////////////////////////////////////////////////////////////////
//! The following functions access the message databases in Wildcat.
//! Messages are identified by there conference number and Id.  Message Ids
//! are assigned when the message is added to the database and never
//! reassigned.  Message Ids are very large numbers, so a separate message
//! 'Number' is provided for convenience.  Message numbers are assigned
//! sequentially within a conference.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY AddMessage(TMsgHeader &msg, const char *text);
BOOL  APIENTRY DeleteMessage(TMsgHeader &msg);
DWORD APIENTRY GetHighMessageNumber(DWORD conf);
DWORD APIENTRY GetLowMessageNumber(DWORD conf);
BOOL  APIENTRY GetMessageById(DWORD conf, DWORD msgid, TMsgHeader &msg);
//BOOL  APIENTRY GetMessageByRef(DWORD conf, DWORD refid, TMsgHeader &msg);
DWORD APIENTRY GetMsgIdFromNumber(DWORD conf, DWORD number);
DWORD APIENTRY GetMsgNumberFromId(DWORD conf, DWORD msgid);
BOOL  APIENTRY GetNextMessage(TMsgHeader &msg);
BOOL  APIENTRY GetPrevMessage(TMsgHeader &msg);
DWORD APIENTRY GetTotalMessages();
DWORD APIENTRY GetTotalMessagesInConference(DWORD conf);
DWORD APIENTRY GetTotalMessagesInGroup(DWORD group);
BOOL  APIENTRY IncrementReplyCount(TMsgHeader &msg);
BOOL  APIENTRY IncrementReadCount(TMsgHeader &msg);
BOOL  APIENTRY MarkMessageRead(TMsgHeader &msg);
BOOL  APIENTRY MessageSearch(DWORD conf, DWORD msgid, DWORD msflags, const char *text, TMsgHeader &msg);
BOOL  APIENTRY SearchMessageById(DWORD conf, DWORD msgid, TMsgHeader &msg);
BOOL  APIENTRY SetMessagePrivate(TMsgHeader &msg, BOOL pvt);
BOOL  APIENTRY UpdateMessageFidoInfo(TMsgHeader &msg);
//BOOL  APIENTRY MessageSearchEx(DWORD conf,
//                               DWORD msgid,
//                               DWORD msflags,
//                               const char *text,
//                               TMsgHeader &msg,
//                               // RPC_ASYNC_STATE *Async
//                               PVOID Async);

//////////////////////////////////////////////////////////////////////////////
//! Use this function to define a group of conference numbers and to retrieve
//! the highest msgid for each conference.
//////////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetHighMessageIds(DWORD count, const DWORD *conferences, DWORD *ids);
// HLS WS 6.0a
BOOL  APIENTRY SetMessageExported(TMsgHeader &msg, BOOL exported);
///////////////////////////////////////////////////////////////////////////
//! The following functions access the user database in Wildcat.  Like the
//! file database, GetUserByXxx gets a specific record, and SearchUserByXxx
//! looks for a matching or the next higher record in the database.
//! GetUserVariable and SetUserVariable can be used to store private
//! application-specific information in a user record.  They are similar in
//! use to the profile functions in the Windows API.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY AddNewUser(TUser &u);
BOOL  APIENTRY DeleteOtherUser(const TUser &u);
BOOL  APIENTRY GetUserById(DWORD id, TUser &u, DWORD &tid);
BOOL  APIENTRY GetUserByLastName(const char *name, TUser &u, DWORD &tid);
BOOL  APIENTRY GetUserByName(const char *name, TUser &u, DWORD &tid);
BOOL  APIENTRY GetUserBySecurity(const char *security, TUser &u, DWORD &tid);
BOOL  APIENTRY GetUserVariable(DWORD id, const char *section, const char *key, const char *def, char *dest, DWORD destsize);
BOOL  APIENTRY GetUserVariables(DWORD id, void *buffer, DWORD requested, DWORD *read);
BOOL  APIENTRY GetFirstUser(DWORD keynum, TUser &u, DWORD &tid);
BOOL  APIENTRY GetLastUser(DWORD keynum, TUser &u, DWORD &tid);
BOOL  APIENTRY GetNextUser(DWORD keynum, TUser &u, DWORD &tid);
BOOL  APIENTRY GetPrevUser(DWORD keynum, TUser &u, DWORD &tid);
DWORD APIENTRY GetTotalUsers();
BOOL  APIENTRY SearchUserById(DWORD id, TUser &u, DWORD &tid);
BOOL  APIENTRY SearchUserByLastName(const char *name, TUser &u, DWORD &tid);
BOOL  APIENTRY SearchUserByName(const char *name, TUser &u, DWORD &tid);
BOOL  APIENTRY SearchUserBySecurity(const char *security, TUser &u, DWORD &tid);
BOOL  APIENTRY SetUserVariable(DWORD id, const char *section, const char *key, const char *data);
BOOL  APIENTRY UpdateUser(TUser &u);
///////////////////////////////////////////////////////////////////////////
//! Convenience functions for accessing the set of conferences that the user
//! can access.  The 'flags' parameter in these functions refers to the
//! user's per-conference read flags.  Using 0 as the 'flags' parameter
//! means ignore it when looking for conferences.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetEffectiveConferenceGroupCount();
DWORD APIENTRY GetEffectiveConferenceCount(DWORD group, DWORD flags);
long  APIENTRY GetFirstConference(DWORD group, DWORD flags);
long  APIENTRY GetLastConference(DWORD group, DWORD flags);
long  APIENTRY GetNextConference(DWORD group, DWORD flags, DWORD conf);
long  APIENTRY GetPrevConference(DWORD group, DWORD flags, DWORD conf);
long  APIENTRY GetFirstConferenceUnread();
long  APIENTRY GetNextConferenceUnread(DWORD conf);
long  APIENTRY GetPrevConferenceUnread(DWORD conf);
BOOL  APIENTRY IsConferenceInGroup(DWORD group, DWORD conf);
///////////////////////////////////////////////////////////////////////////
//! Convenience functions for accessing the set of file areas that the user
//! can access.  Unlike the conference functions, the 'flags' parameter in
//! these functions refers to the user's access flags in the file area
//! (that is, list/download/upload/sysop).  Using 0 as the 'flags' parameter
//! means ignore it when looking for file areas.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetEffectiveFileGroupCount();
DWORD APIENTRY GetEffectiveFileAreaCount(DWORD group, DWORD flags);
long  APIENTRY GetFirstFileArea(DWORD group, DWORD flags);
long  APIENTRY GetLastFileArea(DWORD group, DWORD flags);
long  APIENTRY GetNextFileArea(DWORD group, DWORD flags, DWORD area);
long  APIENTRY GetPrevFileArea(DWORD group, DWORD flags, DWORD area);
BOOL  APIENTRY IsFileAreaInGroup(DWORD group, DWORD area);
///////////////////////////////////////////////////////////////////////////
//! Functions to get and set the current user's per-conference information.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetLastRead(DWORD conf);
DWORD APIENTRY GetFirstUnread(DWORD conf);
DWORD APIENTRY GetConfFlags(DWORD conf);
BOOL  APIENTRY SetLastRead(DWORD conf, DWORD lastread);
BOOL  APIENTRY SetConfFlags(DWORD conf, DWORD flags);
///////////////////////////////////////////////////////////////////////////
//! Functions to get and set an arbitrary user's per-conference information.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY GetUserLastRead(DWORD userid, DWORD conf);
DWORD APIENTRY GetUserFirstUnread(DWORD userid, DWORD conf);
DWORD APIENTRY GetUserConfFlags(DWORD userid, DWORD conf);
BOOL  APIENTRY SetUserLastRead(DWORD userid, DWORD conf, DWORD lastread);
BOOL  APIENTRY SetUserConfFlags(DWORD userid, DWORD conf, DWORD flags);
///////////////////////////////////////////////////////////////////////////
//! Write an entry to a log file.  The 'fname' parameter must NOT contain a
//! full path, just a file name.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY WriteLogEntry(const char *fname, const char *text);
///////////////////////////////////////////////////////////////////////////
//! Write an entry to the current node's activity log file.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY WriteActivityLogEntry(const char *text);
///////////////////////////////////////////////////////////////////////////
//! Check the spelling of a string based on the server's spelling dictionary.
//! Returns the position and length of the bad word, if any.
//! - Suggest alternate spellings for a misspelled word.
//! - Add a word to the auxiliary dictionary.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SpellCheckLine(const char *s, DWORD startpos, DWORD &badpos, DWORD &badlen);
DWORD APIENTRY SpellCheckSuggest(const char *s, TSpellSuggestList &sl);
BOOL  APIENTRY SpellCheckAddWord(const char *s);
///////////////////////////////////////////////////////////////////////////
//! Open a communications channel.  Channels are named, and created on the
//! fly as necessary.  Messages can either be broadcast ('destid'=0), or
//! directed to a specific recipient.  The 'userdata' parameter can be used
//! to distinguish different formats of the message data.
///////////////////////////////////////////////////////////////////////////

DWORD APIENTRY OpenChannel(const char *name);
BOOL  APIENTRY CloseChannel(DWORD chandle);
BOOL  APIENTRY WriteChannel(DWORD chandle, DWORD destid, DWORD userdata, const void *data, DWORD datasize);
///////////////////////////////////////////////////////////////////////////
//! Get the Qwk packet size limits based on the user's reported speed.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetQwkBaudLimits(DWORD &perpacket, DWORD &perconference);
///////////////////////////////////////////////////////////////////////////
//! Retrieve a service record by name.  The service record contains an
//! appropriate IP address and port to pass to connect() to establish
//! communications with the service.  Since the communications with the
//! service does not take place through the Wildcat server, no security or
//! authentication is provided by default.  The
//! GetWildcatServerContextHandle and WildcatServerCreateContextByHandle
//! functions are useful if you need to communicate with the Wildcat server
//! under the context of a logged in user.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetServiceByName(const char *name, TWildcatService &service);
///////////////////////////////////////////////////////////////////////////
//! Register a service with the Wildcat server.  The port number must be
//! filled in before calling this function.  The service remains registered
//! until the process running the service is disconnected from the Wildcat
//! server.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY RegisterService(TWildcatService &service);
BOOL  APIENTRY CheckNetworkAddress(DWORD clientip);