wcserver/vb/modules/wcserver.bas


Declare Function AddMessage Lib "wcvb.dll" Alias "vbAddMessage" (msg As TMsgHeader, ByVal text As String) As Boolean
Declare Function DeleteMessage Lib "wcvb.dll" Alias "vbDeleteMessage" (msg As TMsgHeader) As Boolean
Declare Function GetHighMessageNumber Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetLowMessageNumber Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetMessageById Lib "wcvb.dll" Alias "vbGetMessageById" (ByVal conf As Long, ByVal msgid As Long, msg As TMsgHeader) As Boolean
Declare Function GetMsgIdFromNumber Lib "wcsrv2.dll" (ByVal conf As Long, ByVal number As Long) As Long
Declare Function GetMsgNumberFromId Lib "wcsrv2.dll" (ByVal conf As Long, ByVal msgid As Long) As Long
Declare Function GetNextMessage Lib "wcvb.dll" Alias "vbGetNextMessage" (msg As TMsgHeader) As Boolean
Declare Function GetPrevMessage Lib "wcvb.dll" Alias "vbGetPrevMessage" (msg As TMsgHeader) As Boolean
Declare Function GetTotalMessages Lib "wcsrv2.dll" () As Long
Declare Function GetTotalMessagesInConference Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetTotalMessagesInGroup Lib "wcsrv2.dll" (ByVal group As Long) As Long
Declare Function IncrementReplyCount Lib "wcvb.dll" Alias "vbIncrementReplyCount" (msg As TMsgHeader) As Boolean
Declare Function IncrementReadCount Lib "wcvb.dll" Alias "vbIncrementReadCount" (msg As TMsgHeader) As Boolean
Declare Function MarkMessageRead Lib "wcvb.dll" Alias "vbMarkMessageRead" (msg As TMsgHeader) As Boolean
Declare Function MessageSearch Lib "wcvb.dll" Alias "vbMessageSearch" (ByVal conf As Long, ByVal msgid As Long, ByVal msflags As Long, ByVal text As String, msg As TMsgHeader) As Boolean
Declare Function SearchMessageById Lib "wcvb.dll" Alias "vbSearchMessageById" (ByVal conf As Long, ByVal msgid As Long, msg As TMsgHeader) As Boolean
Declare Function SetMessagePrivate Lib "wcvb.dll" Alias "vbSetMessagePrivate" (msg As TMsgHeader, ByVal pvt As Long) As Boolean
Declare Function UpdateMessageFidoInfo Lib "wcvb.dll" Alias "vbUpdateMessageFidoInfo" (msg As TMsgHeader) As Boolean

'//! Use this function to define a group of conference numbers and to retrieve
'//! the highest msgid for each conference.

Declare Function GetHighMessageIds Lib "wcsrv2.dll" (ByVal count As Long, conferences As Long, ids As Long) As Boolean

Declare Function SetMessageExported Lib "wcvb.dll" Alias "vbSetMessageExported" (msg As TMsgHeader, ByVal exported As Long) As Boolean

'//! The following functions access the user database in Wildcat.  Like the
'//! file database, GetUserByXxx gets a specific record, and SearchUserByXxx
'//! looks for a matching or the next higher record in the database.
'//! GetUserVariable and SetUserVariable can be used to store private
'//! application-specific information in a user record.  They are similar in
'//! use to the profile functions in the Windows API.

Declare Function AddNewUser Lib "wcvb.dll" Alias "vbAddNewUser" (u As TUser) As Boolean
Declare Function DeleteOtherUser Lib "wcvb.dll" Alias "vbDeleteOtherUser" (u As TUser) As Boolean
Declare Function GetUserById Lib "wcvb.dll" Alias "vbGetUserById" (ByVal id As Long, u As TUser, tid As Long) As Boolean
Declare Function GetUserByLastName Lib "wcvb.dll" Alias "vbGetUserByLastName" (ByVal name As String, u As TUser, tid As Long) As Boolean
Declare Function GetUserByName Lib "wcvb.dll" Alias "vbGetUserByName" (ByVal name As String, u As TUser, tid As Long) As Boolean
Declare Function GetUserBySecurity Lib "wcvb.dll" Alias "vbGetUserBySecurity" (ByVal security As String, u As TUser, tid As Long) As Boolean
Declare Function GetUserVariable Lib "wcvb.dll" Alias "vbGetUserVariable" (ByVal id As Long, byval section As String, byval key As String, byval def As String) As String
Declare Function GetUserVariables Lib "wcvb.dll" Alias "vbGetUserVariables" (ByVal id As Long) As String
Declare Function GetFirstUser Lib "wcvb.dll" Alias "vbGetFirstUser" (ByVal keynum As Long, u As TUser, tid As Long) As Boolean
Declare Function GetLastUser Lib "wcvb.dll" Alias "vbGetLastUser" (ByVal keynum As Long, u As TUser, tid As Long) As Boolean
Declare Function GetNextUser Lib "wcvb.dll" Alias "vbGetNextUser" (ByVal keynum As Long, u As TUser, tid As Long) As Boolean
Declare Function GetPrevUser Lib "wcvb.dll" Alias "vbGetPrevUser" (ByVal keynum As Long, u As TUser, tid As Long) As Boolean
Declare Function GetTotalUsers Lib "wcsrv2.dll" () As Long
Declare Function SearchUserById Lib "wcvb.dll" Alias "vbSearchUserById" (ByVal id As Long, u As TUser, tid As Long) As Boolean
Declare Function SearchUserByLastName Lib "wcvb.dll" Alias "vbSearchUserByLastName" (ByVal name As String, u As TUser, tid As Long) As Boolean
Declare Function SearchUserByName Lib "wcvb.dll" Alias "vbSearchUserByName" (ByVal name As String, u As TUser, tid As Long) As Boolean
Declare Function SearchUserBySecurity Lib "wcvb.dll" Alias "vbSearchUserBySecurity" (ByVal security As String, u As TUser, tid As Long) As Boolean
Declare Function SetUserVariable Lib "wcsrv2.dll" (ByVal id As Long, ByVal section As String, ByVal key As String, ByVal data As String) As Boolean
Declare Function UpdateUser Lib "wcvb.dll" Alias "vbUpdateUser" (u As TUser) As Boolean

'//! Convenience functions for accessing the set of conferences that the user
'//! can access.  The 'flags' parameter in these functions refers to the
'//! user's per-conference read flags.  Using 0 as the 'flags' parameter
'//! means ignore it when looking for conferences.

Declare Function GetEffectiveConferenceGroupCount Lib "wcsrv2.dll" () As Long
Declare Function GetEffectiveConferenceCount Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetFirstConference Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetLastConference Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetNextConference Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long, ByVal conf As Long) As Long
Declare Function GetPrevConference Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long, ByVal conf As Long) As Long
Declare Function GetFirstConferenceUnread Lib "wcsrv2.dll" () As Long
Declare Function GetNextConferenceUnread Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetPrevConferenceUnread Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function IsConferenceInGroup Lib "wcsrv2.dll" (ByVal group As Long, ByVal conf As Long) As Boolean

'//! Convenience functions for accessing the set of file areas that the user
'//! can access.  Unlike the conference functions, the 'flags' parameter in
'//! these functions refers to the user's access flags in the file area
'//! (that is, list/download/upload/sysop).  Using 0 as the 'flags' parameter
'//! means ignore it when looking for file areas.

Declare Function GetEffectiveFileGroupCount Lib "wcsrv2.dll" () As Long
Declare Function GetEffectiveFileAreaCount Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetFirstFileArea Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetLastFileArea Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long) As Long
Declare Function GetNextFileArea Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long, ByVal area As Long) As Long
Declare Function GetPrevFileArea Lib "wcsrv2.dll" (ByVal group As Long, ByVal flags As Long, ByVal area As Long) As Long
Declare Function IsFileAreaInGroup Lib "wcsrv2.dll" (ByVal group As Long, ByVal area As Long) As Boolean

'//! Functions to get and set the current user's per-conference information.

Declare Function GetLastRead Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetFirstUnread Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function GetConfFlags Lib "wcsrv2.dll" (ByVal conf As Long) As Long
Declare Function SetLastRead Lib "wcsrv2.dll" (ByVal conf As Long, ByVal lastread As Long) As Boolean
Declare Function SetConfFlags Lib "wcsrv2.dll" (ByVal conf As Long, ByVal flags As Long) As Boolean

'//! Functions to get and set an arbitrary user's per-conference information.

Declare Function GetUserLastRead Lib "wcsrv2.dll" (ByVal userid As Long, ByVal conf As Long) As Long
Declare Function GetUserFirstUnread Lib "wcsrv2.dll" (ByVal userid As Long, ByVal conf As Long) As Long
Declare Function GetUserConfFlags Lib "wcsrv2.dll" (ByVal userid As Long, ByVal conf As Long) As Long
Declare Function SetUserLastRead Lib "wcsrv2.dll" (ByVal userid As Long, ByVal conf As Long, ByVal lastread As Long) As Boolean
Declare Function SetUserConfFlags Lib "wcsrv2.dll" (ByVal userid As Long, ByVal conf As Long, ByVal flags As Long) As Boolean

'//! Write an entry to a log file.  The 'fname' parameter must NOT contain a
'//! full path, just a file name.

Declare Function WriteLogEntry Lib "wcsrv2.dll" (ByVal fname As String, ByVal text As String) As Boolean

'//! Write an entry to the current node's activity log file.

Declare Function WriteActivityLogEntry Lib "wcsrv2.dll" (ByVal text As String) As Boolean

'//! Check the spelling of a string based on the server's spelling dictionary.
'//! Returns the position and length of the bad word, if any.
'//! - Suggest alternate spellings for a misspelled word.
'//! - Add a word to the auxiliary dictionary.

Declare Function SpellCheckLine Lib "wcsrv2.dll" (ByVal s As String, ByVal startpos As Long, badpos As Long, badlen As Long) As Boolean
Declare Function SpellCheckSuggest Lib "wcvb.dll" Alias "vbSpellCheckSuggest" (ByVal s As String, sl As TSpellSuggestList) As Long
Declare Function SpellCheckAddWord Lib "wcsrv2.dll" (ByVal s As String) As Boolean

'//! Open a communications channel.  Channels are named, and created on the
'//! fly as necessary.  Messages can either be broadcast ('destid'=0), or
'//! directed to a specific recipient.  The 'userdata' parameter can be used
'//! to distinguish different formats of the message data.

Declare Function OpenChannel Lib "wcsrv2.dll" (ByVal name As String) As Long
Declare Function CloseChannel Lib "wcsrv2.dll" (ByVal chandle As Long) As Boolean
Declare Function WriteChannel Lib "wcsrv2.dll" (ByVal chandle As Long, ByVal destid As Long, ByVal userdata As Long, data As Any, ByVal datasize As Long) As Boolean

'//! Get the Qwk packet size limits based on the user's reported speed.

Declare Function GetQwkBaudLimits Lib "wcsrv2.dll" (perpacket As Long, perconference As Long) As Boolean

'//! Retrieve a service record by name.  The service record contains an
'//! appropriate IP address and port to pass to connect() to establish
'//! communications with the service.  Since the communications with the
'//! service does not take place through the Wildcat server, no security or
'//! authentication is provided by default.  The
'//! GetWildcatServerContextHandle and WildcatServerCreateContextByHandle
'//! functions are useful if you need to communicate with the Wildcat server
'//! under the context of a logged in user.

Declare Function GetServiceByName Lib "wcvb.dll" Alias "vbGetServiceByName" (ByVal name As String, service As TWildcatService) As Boolean

'//! Register a service with the Wildcat server.  The port number must be
'//! filled in before calling this function.  The service remains registered
'//! until the process running the service is disconnected from the Wildcat
'//! server.

Declare Function RegisterService Lib "wcvb.dll" Alias "vbRegisterService" (service As TWildcatService) As Boolean
Declare Function CheckNetworkAddress Lib "wcsrv2.dll" (ByVal clientip As Long) As Boolean
